Fix string resource

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1455,7 +1455,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">أدخل العبارة السرية</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">عبارة سرية غير صحيحة!</string>
   <string name="PassphrasePromptActivity_unlock_signal">فك قفل Molly </string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - قفل الشاشة</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - قفل الشاشة</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">الخريطة</string>
   <string name="PlacePickerActivity_drop_pin">إدخال إشارة </string>
