--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -1145,7 +1145,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Задай паролата</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Грешна парола!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Отключи Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Заключен екран</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Заключен екран</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Карта</string>
   <string name="PlacePickerActivity_drop_pin">Пуснете пин</string>
