--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1176,7 +1176,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">পাসফ্রেজ সাবমিট করুন</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">অকার্যকর পাসফ্রেজ!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly আনলক করুন</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal অ্যান্ড্রয়েড - লক স্ক্রিন</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly অ্যান্ড্রয়েড - লক স্ক্রিন</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">ম্যাপ</string>
   <string name="PlacePickerActivity_drop_pin">ড্রপ পিন</string>
