--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -1334,7 +1334,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Zadejte heslo</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Chybné heslo!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Odemknout Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Zamykací obrazovka</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Zamykací obrazovka</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Mapa</string>
   <string name="PlacePickerActivity_drop_pin">Umístit ukazatel</string>
