--- a/app/src/main/res/values-cy/strings.xml
+++ b/app/src/main/res/values-cy/strings.xml
@@ -1337,7 +1337,7 @@ Anfon neges heb ei diogelu?</string>
   <string name="PassphrasePromptActivity_ok_button_content_description">Cyflwyno cyfrinymadrodd</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Cyfrinymadrodd annilys!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Datgloi Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Sgrin Cloi</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Sgrin Cloi</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Map</string>
   <string name="PlacePickerActivity_drop_pin">Gollwng pin</string>
