--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -1207,7 +1207,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Tilføj adgangssætning</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Ugyldig adgangssætning!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Lås Molly op</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Låseskærm</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Låseskærm</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Kort</string>
   <string name="PlacePickerActivity_drop_pin">Placér markør</string>
