--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -1206,7 +1206,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Καταχώρηση συνθηματικού</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Μη έγκυρο συνθηματικό!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Ξεκλείδωσε το Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Κλείδωμα οθόνης</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Κλείδωμα οθόνης</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Χάρτης</string>
   <string name="PlacePickerActivity_drop_pin">Καρφίτσωμα τοποθεσίας</string>
