--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -1208,7 +1208,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Sendi pasfrazon</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Nevalida pasfrazo!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Malŝlosi Molly-on</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android — Ŝlosita ekrano</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android — Ŝlosita ekrano</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Mapo</string>
   <string name="PlacePickerActivity_drop_pin">Elekti tiun ĉi lokon</string>
