--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1207,7 +1207,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Enviar clave de acceso</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">¡Clave de acceso no válida!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Desbloquear Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Pantalla bloqueada</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Pantalla bloqueada</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Mapa</string>
   <string name="PlacePickerActivity_drop_pin">Situar chincheta</string>
