--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -1086,7 +1086,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Bidali pasaesaldia</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Pasaesaldi baliogabea!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Desblokeatu Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Blokeatu pantaila</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Blokeatu pantaila</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Mapa</string>
   <string name="PlacePickerActivity_drop_pin">Baztertu pin-a</string>
