--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -1197,7 +1197,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Syötä salalause</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Salalause ei kelpaa!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Avaa Mollyin lukitus</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Lukitusnäyttö</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Lukitusnäyttö</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Kartta</string>
   <string name="PlacePickerActivity_drop_pin">Tee karttamerkintä</string>
