--- a/app/src/main/res/values-fy/strings.xml
+++ b/app/src/main/res/values-fy/strings.xml
@@ -1191,7 +1191,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Wachtwurd ynstelle</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Unjildich wachtwurd!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly ûntskoattelje</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal-Android - Beskoattelingsskerm</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly-Android - Beskoattelingsskerm</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Kaart</string>
   <string name="PlacePickerActivity_drop_pin">Oanwizer</string>
