--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1116,7 +1116,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">પાસફ્રેઝ સબમિટ કરો</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">અમાન્ય પાસફ્રેઝ!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly અનલૉક કરો</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal એન્ડ્રોઇડ - લૉક સ્ક્રીન</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly એન્ડ્રોઇડ - લૉક સ્ક્રીન</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">નકશો</string>
   <string name="PlacePickerActivity_drop_pin">ડ્રોપ પિન</string>
