--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -1177,7 +1177,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">पासफ्रेज जमा करें</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">अमान्य पासफ्रेज</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly खोलो</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - लॉक स्क्रीन</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - लॉक स्क्रीन</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">नक्शा</string>
   <string name="PlacePickerActivity_drop_pin">पीन दें</string>
