--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -1195,7 +1195,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Jelmondat küldése</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Érvénytelen jelmondat!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly feloldása</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Képernyőzár</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Képernyőzár</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Térkép</string>
   <string name="PlacePickerActivity_drop_pin">Rajztű ledobása</string>
