--- a/app/src/main/res/values-is/strings.xml
+++ b/app/src/main/res/values-is/strings.xml
@@ -1207,7 +1207,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Senda inn lykilorð</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Ógilt lykilorð!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Aflæsa Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Skjálæsing</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Skjálæsing</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Kort</string>
   <string name="PlacePickerActivity_drop_pin">Títuprjónn</string>
