--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1207,7 +1207,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Inserisci password</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Password non valida!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Sblocca Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Blocco schermo</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Blocco schermo</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Mappa</string>
   <string name="PlacePickerActivity_drop_pin">Posiziona l\'indicatore</string>
