--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -1335,7 +1335,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">הגש משפט־סיסמה</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">משפט־סיסמה בלתי תקף!</string>
   <string name="PassphrasePromptActivity_unlock_signal">שחרר נעילת Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - מסך נעילה</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - מסך נעילה</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">מפה</string>
   <string name="PlacePickerActivity_drop_pin">זרוק מצביע</string>
