--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1142,7 +1142,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">パスフレーズを設定する</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">不正なパスフレーズです！</string>
   <string name="PassphrasePromptActivity_unlock_signal">Mollyのロックを解除する</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - ロック画面</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - ロック画面</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">地図</string>
   <string name="PlacePickerActivity_drop_pin">ピンを打つ</string>
