--- a/app/src/main/res/values-kab/strings.xml
+++ b/app/src/main/res/values-kab/strings.xml
@@ -1085,7 +1085,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Azen tafyirt tuffirt</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Tafyirt tuffirt d tarameɣtut!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Kkes asekkeṛ i Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Sekkeṛ agdil</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Sekkeṛ agdil</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Takarḍa</string>
   <string name="PlacePickerActivity_drop_pin">Kkes pin</string>
