--- a/app/src/main/res/values-km/strings.xml
+++ b/app/src/main/res/values-km/strings.xml
@@ -1126,7 +1126,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">បញ្ជូនឃ្លាសម្ងាត់</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">ឃ្លាសម្ងាត់មិនត្រឹមត្រូវ!</string>
   <string name="PassphrasePromptActivity_unlock_signal">ដោះសោរMolly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - អេក្រង់ចាក់សោ</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - អេក្រង់ចាក់សោ</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">ផែនទី</string>
   <string name="PlacePickerActivity_drop_pin">ដាក់ចំណុច</string>
