--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -1121,7 +1121,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">ಪಾಸ್‌ಫ್ರೇಸ್‌ ಸಲ್ಲಿಸಿ</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">ಪಾಸ್‌ಫ್ರೇಸ್‌ ಮಾನ್ಯವಾದದ್ದಲ್ಲ!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly ಅನ್ಲಾಕ್ ಮಾಡಿ</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal ಆಂಡ್ರಾಯ್ಡ್‌ - ಲಾಕ್ ಸ್ಕ್ರೀನ್</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly ಆಂಡ್ರಾಯ್ಡ್‌ - ಲಾಕ್ ಸ್ಕ್ರೀನ್</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">ನಕ್ಷೆ</string>
   <string name="PlacePickerActivity_drop_pin">ಡ್ರಾಪ್ ಪಿನ್</string>
