--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -1335,7 +1335,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Pateikti slaptafrazę</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Neteisinga slaptafrazė!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Atrakinti Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal „Android“ - Ekrano užraktas</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly „Android“ - Ekrano užraktas</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Žemėlapis</string>
   <string name="PlacePickerActivity_drop_pin">Įsmeigti smeigtuką</string>
