--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -1266,7 +1266,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Iesniegt paroles frāzi</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Nepareiza paroles frāze</string>
   <string name="PassphrasePromptActivity_unlock_signal">Atbloķēt Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - bloķēt ekrānu</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - bloķēt ekrānu</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Karte</string>
   <string name="PlacePickerActivity_drop_pin">Nomest atzīmi/piespraudi</string>
