--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1198,7 +1198,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">രഹസ്യവാചകം സമർപ്പിക്കുക</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">രഹസ്യവാചകം അസാധുവാണ്!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly തുറക്കൂ</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - ലോക്ക് സ്‌ക്രീൻ</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - ലോക്ക് സ്‌ക്രീൻ</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">ഭൂപടം</string>
   <string name="PlacePickerActivity_drop_pin">ഡ്രോപ്പ് പിൻ</string>
