--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -1206,7 +1206,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">पासफ्रेझ प्रविष्ट करा</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">अवैध पासफ्रेझ!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly अनलॉक करा</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - लॉक स्क्रीन</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - लॉक स्क्रीन</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">नकाशा</string>
   <string name="PlacePickerActivity_drop_pin">पिन ड्रॉप करा</string>
