--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -1114,7 +1114,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Hantar frasa laluan</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Frasa laluan tidak sah!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Buka Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Kunci Skrin</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Kunci Skrin</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Peta</string>
   <string name="PlacePickerActivity_drop_pin">Letakkan pin</string>
