--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -1111,7 +1111,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Send inn passord</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Ugyldig passord!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Lås opp Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Skjermlås</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Skjermlås</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Kart</string>
   <string name="PlacePickerActivity_drop_pin">Slipp nål</string>
