--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1209,7 +1209,7 @@ In groepen zullen jouw berichten niet zichtbaar zijn voor personen die je hebt g
   <string name="PassphrasePromptActivity_ok_button_content_description">Wachtwoord instellen</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Ongeldig wachtwoord!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly ontgrendelen</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal-Android - Vergrendelingsscherm</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly-Android - Vergrendelingsscherm</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Kaart</string>
   <string name="PlacePickerActivity_drop_pin">Aanwijzer</string>
