--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -1089,7 +1089,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">ପାସ୍-ଫ୍ରେଜ ଦାଖଲ କରନ୍ତୁ</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">ଅବୈଧ ପାସ୍-ଫ୍ରେଜ</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly ତାଲା ଫିଟାନ୍ତୁ</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal ଆଣ୍ଡ୍ରଏଡ୍-ଚିତ୍ରପଟ୍ଟ ତାଲା </string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly ଆଣ୍ଡ୍ରଏଡ୍-ଚିତ୍ରପଟ୍ଟ ତାଲା </string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">ମାନଚିତ୍ର</string>
   <string name="PlacePickerActivity_drop_pin">ଡ୍ରପ୍ ପିନ୍</string>
