--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1179,7 +1179,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">ਪਾਸਫ਼੍ਰੇਜ਼ ਦਰਜ ਕਰੋ</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">ਅਵੈਧ ਪਾਸਫ਼੍ਰੇਜ਼!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly ਨੂੰ ਅਨਲੌਕ ਕਰੋ</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - ਲਾਕ ਸਕਰੀਨ</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - ਲਾਕ ਸਕਰੀਨ</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">ਨਕਸ਼ਾ</string>
   <string name="PlacePickerActivity_drop_pin">ਪਿੰਨ ਲਾਹੋ</string>
