--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1334,7 +1334,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Wprowadź hasło</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Nieprawidłowe hasło!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Odblokuj Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Blokada ekranu</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Blokada ekranu</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Mapa</string>
   <string name="PlacePickerActivity_drop_pin">Umieść znacznik</string>
