--- a/app/src/main/res/values-ps/strings.xml
+++ b/app/src/main/res/values-ps/strings.xml
@@ -1123,7 +1123,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">د پټ عبارت تسلیمول</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">ناسم پټ عبارت!</string>
   <string name="PassphrasePromptActivity_unlock_signal">له قفل حالت څخه د Molly  ایستل</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - قفل شوی سکرین</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - قفل شوی سکرین</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">نقشه</string>
   <string name="PlacePickerActivity_drop_pin">د سنجاق اچول</string>
