--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1206,7 +1206,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Submeter frase-chave</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Frase-chave inválida!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Desbloquear o Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Ecrã de bloqueio</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Ecrã de bloqueio</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Mapa</string>
   <string name="PlacePickerActivity_drop_pin">Colocar pino</string>
