--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -1271,7 +1271,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Trimite parola</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Parolă incorectă!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Deblochează Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Ecran de blocare</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Ecran de blocare</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Hartă</string>
   <string name="PlacePickerActivity_drop_pin">Alege marcaj</string>
