--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1334,7 +1334,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Подтвердить парольную фразу</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Неверная парольная фраза!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Разблокировать Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Экран блокировки</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Экран блокировки</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Карта</string>
   <string name="PlacePickerActivity_drop_pin">Поставить метку</string>
