--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -1334,7 +1334,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Vnesite geslo</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Napačno geslo!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Odkleni Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Zaklenjen zaslon</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Zaklenjen zaslon</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Zemljevid</string>
   <string name="PlacePickerActivity_drop_pin">Izpusti</string>
