--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -1208,7 +1208,7 @@ grupit dhe s\’do të marrë mesazhe grupi përpara se ta pranojë:</item>
   <string name="PassphrasePromptActivity_ok_button_content_description">Parashtroje frazëkalimin</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Frazëkalim i pavlefshëm!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Shkyçe Molly-in</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Kyçje Ekrani</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Kyçje Ekrani</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Hartë</string>
   <string name="PlacePickerActivity_drop_pin">Lini pin</string>
