--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -1266,7 +1266,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Поднеси лозинку</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Нетачна лозинка!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Откључај Сигнал</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Андроид - Закључани Екран</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Андроид - Закључани Екран</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Мапа</string>
   <string name="PlacePickerActivity_drop_pin">Постави ознаку</string>
