--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -1206,7 +1206,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Skicka lösenord</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Fel lösenord!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Lås upp Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Låsskärm</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Låsskärm</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Karta</string>
   <string name="PlacePickerActivity_drop_pin">Släpp stift</string>
