--- a/app/src/main/res/values-sw/strings.xml
+++ b/app/src/main/res/values-sw/strings.xml
@@ -1119,7 +1119,7 @@ Signal inahitaji ruhusa ya Kamera ili kuskani msimbo wa QR, lakini imekataliwa k
   <string name="PassphrasePromptActivity_ok_button_content_description">Wasilisha nenosiri</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Nenosiri sio sahihi</string>
   <string name="PassphrasePromptActivity_unlock_signal">Fungua Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Kufunga Skrini</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Kufunga Skrini</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Ramani</string>
   <string name="PlacePickerActivity_drop_pin">Weka nambari ya siri</string>
