--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1139,7 +1139,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">கடவுச்சொல்லை சமர்ப்பிக்க</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">தவறான கடவுச்சொல்!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly லைத் திற</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal ஆண்ட்ராய்டு - திரைப் பூட்டு</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly ஆண்ட்ராய்டு - திரைப் பூட்டு</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">வரைபடம்</string>
   <string name="PlacePickerActivity_drop_pin">கடவை கைவிடு </string>
