--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -1109,7 +1109,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">సంకేతపదమును సమర్పించండి</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">చెల్లని సంకేతపదము!</string>
   <string name="PassphrasePromptActivity_unlock_signal">అన్లాక్ Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - లాక్ స్క్రీన్</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - లాక్ స్క్రీన్</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">పటం</string>
   <string name="PlacePickerActivity_drop_pin">డ్రాప్ పిన్</string>
