--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1068,7 +1068,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">ส่งวลีรหัสผ่าน</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">วลีรหัสผ่านไม่ถูกต้อง!</string>
   <string name="PassphrasePromptActivity_unlock_signal">ปลดล็อก Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - หน้าล็อก</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - หน้าล็อก</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">แผนที่</string>
   <string name="PlacePickerActivity_drop_pin">ปักหมุด</string>
