--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Parola gir</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Geçersiz parola!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly\'in Kilidini Aç</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Kilit Ekranı</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Kilit Ekranı</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Harita</string>
   <string name="PlacePickerActivity_drop_pin">İşaretle</string>
