--- a/app/src/main/res/values-ug/strings.xml
+++ b/app/src/main/res/values-ug/strings.xml
@@ -1127,7 +1127,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">ئىم ئىبارىسىنى تاپشۇرۇڭ</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">ئىناۋەتسىز ئىم ئىبارىسى!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly نى ئاجرىتىڭ</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - قۇلۇپ ئېكرانى</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - قۇلۇپ ئېكرانى</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">خەرىتە</string>
   <string name="PlacePickerActivity_drop_pin">ئەن</string>
