--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1336,7 +1336,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Ввести фразу-пароль</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Хибна фраза-пароль!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Розблокувати Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Екран блокування</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Екран блокування</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Карта</string>
   <string name="PlacePickerActivity_drop_pin">Поставити мітку </string>
