--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -1121,7 +1121,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">پاسفریز جمع کریں</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">غلط پاسفریز!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly ان لاک کریں</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - لاک اسکرین</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - لاک اسکرین</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">نقشہ</string>
   <string name="PlacePickerActivity_drop_pin">ڈراپ پن</string>
