--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1120,7 +1120,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Gửi mật khẩu</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Mật khẩu không đúng!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Mở khóa Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Màn hình Khoá</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Màn hình Khoá</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Bản đồ</string>
   <string name="PlacePickerActivity_drop_pin">Thả ghim</string>
