--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1059,7 +1059,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">提交密码</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">无效密码！</string>
   <string name="PassphrasePromptActivity_unlock_signal">解锁 Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - 锁定屏幕</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - 锁定屏幕</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">地图</string>
   <string name="PlacePickerActivity_drop_pin">标注</string>
