--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -1143,7 +1143,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">提交密碼</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">密碼無效！</string>
   <string name="PassphrasePromptActivity_unlock_signal">解除鎖定 Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - 鎖定畫面</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - 鎖定畫面</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">地圖</string>
   <string name="PlacePickerActivity_drop_pin">放置圖釘</string>
