--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1142,7 +1142,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">送出密碼</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">無效的密碼！</string>
   <string name="PassphrasePromptActivity_unlock_signal">解鎖 Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android-螢幕鎖定</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android-螢幕鎖定</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">地圖</string>
   <string name="PlacePickerActivity_drop_pin">標註地圖</string>
