--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -1207,7 +1207,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Parolu təqdim edin</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Etibarsız parol!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly-ın kilidini aç</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Kilid Ekranı</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Kilid Ekranı</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Xəritə</string>
   <string name="PlacePickerActivity_drop_pin">Sancaqla</string>
