--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -1129,7 +1129,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">Kirim frasa sandi</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Frasa sandi tidak valid!</string>
   <string name="PassphrasePromptActivity_unlock_signal">Buka kunci Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - Kunci Layar</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - Kunci Layar</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Peta</string>
   <string name="PlacePickerActivity_drop_pin">Pasang pointer tempat</string>
