--- a/app/src/main/res/values-my/strings.xml
+++ b/app/src/main/res/values-my/strings.xml
@@ -1038,7 +1038,7 @@
   <string name="PassphrasePromptActivity_ok_button_content_description">စကားဝှက် တင်သွင်းပါ</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">စကားဝှက် မှားနေသည်</string>
   <string name="PassphrasePromptActivity_unlock_signal">Molly ကို ပြန်ဖွင့်ပါ</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android - သော့ခတ် စကင်ရင်</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android - သော့ခတ် စကင်ရင်</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">မြေပုံ</string>
   <string name="PlacePickerActivity_drop_pin">ပင်ချမယ်</string>
