--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -1211,7 +1211,7 @@ Dei er invitert inn, og ser inga gruppemeldingar før dei godtek.</string>
   <string name="PassphrasePromptActivity_ok_button_content_description">Send inn passordfrase</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Ugyldig passordfrase.</string>
   <string name="PassphrasePromptActivity_unlock_signal">Lås opp Molly</string>
-  <string name="PassphrasePromptActivity_signal_android_lock_screen">Signal Android – låseskjerm</string>
+  <string name="PassphrasePromptActivity_signal_android_lock_screen">Molly Android – låseskjerm</string>
   <!--PlacePickerActivity-->
   <string name="PlacePickerActivity_title">Kart</string>
   <string name="PlacePickerActivity_drop_pin">Slepp nåla</string>
